[package]
name = "integration_tests"
version = "0.0.0"
authors = ["Exonum Team <exonum@bitfury.com>"]
publish = false
edition = "2018"

build = "build.rs"

[dependencies]
exonum = { version = "0.13.0-rc.2", git = "https://github.com/exonum/exonum", rev = "42fd92b6" }
exonum-derive = { version = "0.13.0-rc.2", git = "https://github.com/exonum/exonum", rev = "42fd92b6" }
exonum-merkledb = { version = "0.13.0-rc.2", git = "https://github.com/exonum/exonum", rev = "42fd92b6" }
exonum-proto = { version = "0.13.0-rc.2", git = "https://github.com/exonum/exonum", rev = "42fd92b6" }

actix-web = { version = "0.7.19", default-features = false }
backtrace = "=0.3.40" # Last Rust 1.36-compatible version
chrono = "0.4.10"
hex = "0.4.0"
failure = "0.1.6"
protobuf = "2.10.0"
rand = "0.7.2"
rand_chacha = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
uuid = "0.8.1"

[build-dependencies]
exonum-build = { version = "0.13.0-rc.2", git = "https://github.com/exonum/exonum", rev = "42fd92b6" }
