[package]
name = "integration_tests"
version = "0.0.0"
authors = ["The Exonum Team <contact@exonum.com>"]
publish = false
edition = "2018"

[dependencies]
exonum = "=1.0.0"
exonum-derive = "=1.0.0"
exonum-merkledb = "=1.0.0"
exonum-proto = "=1.0.0"

actix-web = { version = "0.7.19", default-features = false }
anyhow = "1.0"
backtrace = "0.3"
chrono = "0.4"
hex = "0.4"
protobuf = "2.25"
rand = "0.8"
rand_chacha = "0.3"
serde = "1.0"
serde_derive = "1.0"
uuid = "0.8"

[build-dependencies]
exonum-build = "=1.0.0"
